<resources>
    <string name="app_name">martinez_ramirez_miguel_angel_pmdm03</string>
    <string name="language">Idioma</string>
    <string name="english">Inglés</string>
    <string name="spanish">Español</string>
    <string name="info_eliminate">Activar o desactivar la eliminación</string>
    <string name="permit_eliminate">Permitir Eliminación de Pokemon</string>
    <string name="info_dark">Activar o desactivar el modo oscuro</string>
    <string name="dark_mode">Modo Oscuro</string>
    <string name="about">Acerca de...</string>
    <string name="about_text">Aplicación desarrollada por Miguel Ángel Martínez Ramírez. Versión 1.0.</string>
    <string name="language_summary">Selecciona el idioma</string>
    <string name="log_out">Cerrar Sesión</string>
    <string name="pokedex">Pokédex</string>
    <string name="capturados">Capturados</string>
    <string name="settings">Ajustes</string>
    <string name="capturados_text">Pokémon Capturados</string>
    <string name="settings_text">Pantalla de Ajustes</string>
    <string name="email">Correo Electrónico</string>
    <string name="pass">Contraseña</string>
    <string name="login_button_text">Iniciar Sesión</string>
    <string name="register_button_text">Registrar Usuario</string>
    <string name="pokemon_name">Nombre del Pokemon</string>
    <string name="pokemon_tipe">Tipo de Pokemon</string>
    <string name="pokemon_height">Altura</string>
    <string name="pokemon_weight">Peso</string>
    <string name="pokemon_index">Índice</string>
    <string name="pokemon_name_text">"Nombre: "</string>
    <string name="pokemon_types_text">"Tipos: "</string>
    <string name="pokemon_weight_text">"Peso: "</string>
    <string name="pokemon_height_text">"Altura: "</string>
    <string name="pokemon_index_text">"Índice: "</string>
    <string name="pokemon_types">"Tipo: "</string>
    <string name="captured_before">¡Este Pokémon ya está capturado!</string>
    <string name="captured_pokemon">¡Pokémon capturado!</string>
    <string name="error_user_unknown">Error: Usuario no autenticado</string>
    <string name="pokemon_captured">Pokémon capturado guardado exitosamente</string>
    <string name="error_save">Error al guardar Pokémon</string>
    <string name="delete_confirm">Eliminar pokemon</string>
    <string name="confirm_delete_text1">"¿Estás seguro de que deseas eliminar a "</string>
    <string name="confirm_delete_text2">" de tus Pokémon capturados?"</string>
    <string name="yes">Sí</string>
    <string name="query_error">"Error al consultar los Pokémon capturados: "</string>
    <string name="pokemon_deleted">Pokémon eliminado exitosamente</string>
    <string name="delete_error">Error al eliminar Pokémon</string>
    <string name="no">No</string>
    <string name="delete_blocked">Para eliminar un Pokémon, activa el modo de eliminación en los ajustes.</string>
    <string name="incomplete_credential">Por favor, completa ambos campos</string>
    <string name="credential_error">Error de inicio de sesión. Verifica tus credenciales.</string>
    <string name="invalid_password">La contraseña debe tener al menos 6 caracteres</string>
    <string name="sucessful_registration">Registro exitoso. Inicia sesión con tus credenciales.</string>
    <string name="registration_error">Error al registrarse. Inténtalo de nuevo.</string>
    <string name="detail_error">"Error al obtener detalles del Pokémon: "</string>
    <string name="call_error">"Error en la llamada: "</string>
    <string name="dark_mode_activated">Modo oscuro activado</string>
    <string name="dark_mode_desactivated">Modo oscuro desactivado</string>
    <string name="eliminate_mode_on">Modo eliminación activado</string>
    <string name="eliminate_mode_off">Modo eliminación desactivado</string>
    <string name="language_selected">"Idioma seleccionado: "</string>
    <string name="ok">OK</string>
    <string name="session_closed">Sesión cerrada</string>
    <string name="unknown_language">Idioma desconocido</string>
    <string name="delete">Eliminar</string>

</resources>