<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreferenceCompat
        android:key="dark_mode"
        android:title="@string/dark_mode"
        android:summary="@string/info_dark" />

    <SwitchPreferenceCompat
        android:key="eliminate_mode"
        android:title="@string/permit_eliminate"
        android:summary="@string/info_eliminate" />


    <ListPreference
        android:key="language"
        android:title="@string/language"
        android:summary="@string/language_summary"
        android:defaultValue="es"
        android:entries="@array/language_options"
        android:entryValues="@array/language_values" />

    <Preference
        android:key="about"
        android:title="@string/about" />

    <Preference
        android:key="log_out"
        android:title="@string/log_out" />


</PreferenceScreen>