<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:elevation="4dp"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Imagen del Pokémon -->
            <ImageView
                android:id="@+id/image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="8dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_launcher_background" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingStart="8dp">

                <!-- Nombre del Pokémon -->
                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pokemon_name"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textAllCaps="true"/>

                <TextView
                    android:id="@+id/index"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pokemon_index"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/height"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pokemon_height"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pokemon_weight"
                    android:textSize="14sp" />

                <!-- Fila para texto y tipos -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <!-- Texto para los tipos -->
                    <TextView
                        android:id="@+id/types_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pokemon_types"
                        android:textSize="14sp"/>

                    <!-- Contenedor para los iconos de tipos -->
                    <LinearLayout
                        android:id="@+id/types_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:orientation="horizontal"
                        android:gravity="start">

                        <!-- Iconos de tipos añadidos dinámicamente -->
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</layout>
